test/functions/intents/out/split-init-out-formal-no-type.good
split-init-out-formal-no-type.chpl:2: In function 'f':
split-init-out-formal-no-type.chpl:2: error: 'arg' is not initialized and has no type
note: the type for a generic out intent argument is inferred from the function body
