test/functions/intents/out/split-init-out-formal-no-type.chpl

proc f(out arg) {
}

proc main() {
  var x;
  f(x);
}
